Fixed some bugs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -535,7 +535,7 @@
       <nav id="navDesktop">
 
         <a href="#products">Products</a>
-        <a href="#articles">Articles</a>
+        <a href="#articles">Journal</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <a href="/record">Orders</a>
