--- a/views/display.ejs
+++ b/views/display.ejs
@@ -121,11 +121,11 @@
           <input type="text" name="address" placeholder="Delivery Address" required>
           <select name="quantity" id="quantity" required>
             <option value="">Select Quantity</option>
-            <option value= 1>1 Bottle</option>
-            <option value= 2>2 Bottles</option>
-            <option value= 3>3 Bottles</option>
-            <option value= 4>4 Bottles</option>
-            <option value= 5>5 Bottles</option>
+            <option value= 1>1</option>
+            <option value= 2>2</option>
+            <option value= 3>3</option>
+            <option value= 4>4</option>
+            <option value= 5>5</option>
           </select>
           <h2>Complete Your Payment</h2>
 
