--- a/views/index.ejs
+++ b/views/index.ejs
@@ -598,7 +598,7 @@
         <!-- Product Cards (swap images) -->
         <% products.forEach((product,i)=>{ %>
           <div class="card">
-            <img src="\images\productimg\<%=product.image%>" alt="Velora" />
+            <img src="<%=product.image%>" alt="Velora" />
             <h3>
               <%=product.title%>
             </h3>
