--- a/views/order.ejs
+++ b/views/order.ejs
@@ -111,7 +111,7 @@
       <div class="summary">
         <h3><%= order.title %></h3>
         <p>• Eau de Parfum</p>
-        <img src ="\images\productimg\<%=order.image%>"height="300px" width="300px">
+        <img src ="<%=order.image%>"height="300px" width="300px">
         <p><strong>Price:</strong> PKR <%= order.price %></p>
       </div>
 
