--- a/views/display.ejs
+++ b/views/display.ejs
@@ -102,7 +102,7 @@
   <div class="container">
     <!-- Product Image -->
     <div class="product-img">
-      <img src="/images/productimg/<%= order.image %>" alt="Velora">
+      <img src="<%= order.image %>" alt="Velora">
     </div>
 
     <!-- Product Info -->
