--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -54,6 +54,9 @@ header {
   font-weight: 700;
   color: var(--primary);
 }
+a{
+  text-decoration:none ;
+}
 
 .logo .subtitle {
   font-size: 13px;
@@ -221,7 +224,7 @@ nav a:hover {
     
 /* ---------------- FOOTER ---------------- */
 footer {
-  padding: 30px 0px;
+  padding: 30px 30px;
   border-top: 1px solid rgba(255, 255, 255, 0.08);
   max-width: 1300px;
   justify-content: center;
@@ -287,11 +290,11 @@ footer .muted {
 </head>
 <header>
       <div class="brand">
-        <div class="logo">
+        <a class="logo" href="/">
           <div class="title">Velora</div>
           <div class="subtitle">By HK</div>
         </div>
-      </div>
+      </a>
 
 
       <div class="hamburger" id="hamburger" aria-label="Menu" aria-expanded="false" role="button">
