--- a/views/display.ejs
+++ b/views/display.ejs
@@ -12,6 +12,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+a{
+  text-decoration:none ;
+}
     body {
       font-family: Arial, sans-serif;
       background-color: #111;
@@ -220,7 +223,7 @@ nav a:hover {
     
 /* ---------------- FOOTER ---------------- */
 footer {
-  padding: 30px 0px;
+  padding: 30px 30px;
   border-top: 1px solid rgba(255, 255, 255, 0.08);
   max-width: 1300px;
   justify-content: center;
@@ -279,10 +282,11 @@ footer .muted {
 <body>
   <header>
       <div class="brand">
-        <div class="logo">
+        <a class="logo" href="/">
           <div class="title">Velora</div>
+         
           <div class="subtitle">By HK</div>
-        </div>
+        </a>
       </div>
 
 
