--- a/views/record.ejs
+++ b/views/record.ejs
@@ -154,7 +154,9 @@ h1 {
   margin-bottom: 24px;
   color: #fff;
 }
-
+a{
+  text-decoration:none ;
+}
 .empty {
   font-size: 1.1rem;
   color: #bbb;
@@ -265,7 +267,7 @@ h1 {
 
 /* ---------------- FOOTER ---------------- */
 footer {
-  padding: 30px 0px;
+  padding: 30px 30px;
   border-top: 1px solid rgba(255, 255, 255, 0.08);
   max-width: 1300px;
   justify-content: center;
@@ -330,11 +332,11 @@ footer .muted {
 
    <header>
       <div class="brand">
-        <div class="logo">
+        <a class="logo" href="/">
           <div class="title">Velora</div>
           <div class="subtitle">By HK</div>
         </div>
-      </div>
+      </a>
 
 
       <div class="hamburger" id="hamburger" aria-label="Menu" aria-expanded="false" role="button">
